<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cupcake Timer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="timer">25:00</string>
    <string name="minute">25</string>
    <string name="colon">:</string>
    <string name="second">00</string>
    <string name="start">Start</string>
    <string name="upArrow">up arrow</string>
    <string name="downArrow">down arrow</string>
    <string name="notask">No Task is Selected</string>
    <string name="title_activity_task_edit">TaskEditActivity</string>
    <string name="taskNameLabel">Task Name</string>
    <string name="DefaultTimeMinutes">Default Time (minutes)</string>
    <string name="save">Save</string>
    
    <color name="brown">#4D3832</color>
    <color name="mint">#37EDC6</color>
    <color name="palemint">#ACFAE9</color>

</resources>
