<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TimerActivity" >

    <TextView
        android:id="@+id/minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/colon"
        android:layout_alignBottom="@+id/colon"
        android:layout_toLeftOf="@+id/colon"
        android:text="@string/minute"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/colon"
        android:layout_alignBottom="@+id/colon"
        android:layout_toRightOf="@+id/colon"
        android:text="@string/second"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="72sp" />

    <Button
        android:id="@+id/startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colon"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />

    <ImageButton
        android:id="@+id/downArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upArrow"
        android:layout_toLeftOf="@+id/minute"
        android:src="@android:drawable/arrow_down_float"
        android:contentDescription="@string/downArrow" />

    <ImageButton
        android:id="@+id/upArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/minute"
        android:layout_toLeftOf="@+id/minute"
        android:contentDescription="@string/upArrow"
        android:src="@android:drawable/arrow_up_float" />

    <TextView
        android:id="@+id/colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/colon"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="72sp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" >
    </ListView>

    <TextView
        android:id="@+id/currentTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/list"
        android:layout_alignParentTop="true"
        android:text="@string/notask"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
